--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="1y78u9zp6evgzbvd437q8vofq0mtzh" />
+    <title>Document</title>
+</head>
+<body>
+CAMAS VIEW CONDOS LLC
+7625 NW SKYLINE BLVD, PORTLAND, OR, 97229
+</body>
+</html>
+
